[package]
name = "rustwire"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rand = "0.10.2"
ratatui = "0.30.2"
reqwest = "0.13.4"
serde = "1.0.228"
serde_bencode = "0.2.4"
serde_bytes = "0.11.19"
serde_derive = "1.0.228"
sha1 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
